[gd_scene load_steps=6 format=2]

[ext_resource path="res://eye.tscn" type="PackedScene" id=1]
[ext_resource path="res://lash.tscn" type="PackedScene" id=2]
[ext_resource path="res://Protozoa.gd" type="Script" id=3]
[ext_resource path="res://mouth.tscn" type="PackedScene" id=4]

[sub_resource type="PhysicsMaterial" id=1]

[node name="Protozoa" type="RigidBody2D"]
physics_material_override = SubResource( 1 )
linear_damp = 3.0
script = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.345098, 0.815686, 0.262745, 1 )
antialiased = true
polygon = PoolVector2Array( 0, -76.4746, 19.5996, -75.5762, 27.3889, -74.4971, 33.9844, -73.0371, 39.4958, -71.2256, 44.0332, -69.0918, 47.7063, -66.665, 50.625, -63.9746, 52.8992, -61.0498, 54.6387, -57.9199, 55.9534, -54.6143, 56.9531, -51.1621, 60, -36.4746, 61.0706, -32.9492, 62.377, -29.834, 63.8738, -27.0703, 65.5156, -24.5996, 72.625, -16.4746, 75.8691, -12.6465, 77.2546, -10.5859, 78.4219, -8.34961, 79.3254, -5.87891, 79.9199, -3.11523, 80.1599, 0, 80, 3.52539, 79.0781, 10.166, 77.875, 15.4004, 72.125, 31.6504, 70.9219, 36.8848, 70, 43.5254, 69.0781, 50.166, 67.875, 55.4004, 62.125, 71.6504, 60.9219, 76.8848, 60, 83.5254, 58.75, 103.525, 57.9102, 107.354, 56.3438, 111.65, 50, 123.525, 40.6406, 138.213, 35.498, 144.971, 29.875, 151.025, 26.843, 153.716, 23.6426, 156.143, 20.2576, 158.276, 16.6719, 160.088, 12.8694, 161.548, 8.83398, 162.627, 4.54956, 163.296, 0, 163.525, -4.54956, 163.296, -8.83398, 162.627, -12.8694, 161.548, -16.6719, 160.088, -20.2576, 158.276, -23.6426, 156.143, -26.843, 153.716, -29.875, 151.025, -35.498, 144.971, -40.6406, 138.213, -50, 123.525, -56.3438, 111.65, -57.9102, 107.354, -58.75, 103.525, -60, 83.5254, -60.9219, 76.8848, -62.125, 71.6504, -67.875, 55.4004, -69.0781, 50.166, -70, 43.5254, -70.9219, 36.8848, -72.125, 31.6504, -77.875, 15.4004, -79.0781, 10.166, -80, 3.52539, -80.1599, 0, -79.9199, -3.11523, -79.3254, -5.87891, -78.4219, -8.34961, -77.2546, -10.5859, -75.8691, -12.6465, -72.625, -16.4746, -65.5156, -24.5996, -63.8738, -27.0703, -62.377, -29.834, -61.0706, -32.9492, -60, -36.4746, -56.9531, -51.1621, -55.9534, -54.6143, -54.6387, -57.9199, -52.8992, -61.0498, -50.625, -63.9746, -47.7063, -66.665, -44.0332, -69.0918, -39.4958, -71.2256, -33.9844, -73.0371, -27.3889, -74.4971, -19.5996, -75.5762 )

[node name="Eye" parent="." instance=ExtResource( 1 )]
position = Vector2( -29.6922, -27.4071 )
rotation = -0.523599

[node name="Eye2" parent="." instance=ExtResource( 1 )]
position = Vector2( 29.3021, -26.8593 )
rotation = 0.523599

[node name="Eye3" parent="." instance=ExtResource( 1 )]
position = Vector2( 0.0959854, -50.0508 )

[node name="Lash" parent="." instance=ExtResource( 2 )]
position = Vector2( -33, 136.949 )
rotation = 3.66519
active = false

[node name="Lash2" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 156.949 )
rotation = 3.14159
active = false

[node name="Lash3" parent="." instance=ExtResource( 2 )]
position = Vector2( 33, 136.949 )
rotation = 2.61799
active = false

[node name="Polygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.198425, 0 )
polygon = PoolVector2Array( 0, -76.4746, 19.5996, -75.5762, 27.3889, -74.4971, 33.9844, -73.0371, 39.4958, -71.2256, 44.0332, -69.0918, 47.7063, -66.665, 50.625, -63.9746, 52.8992, -61.0498, 54.6387, -57.9199, 55.9534, -54.6143, 56.9531, -51.1621, 60, -36.4746, 61.0706, -32.9492, 62.377, -29.834, 63.8738, -27.0703, 65.5156, -24.5996, 72.625, -16.4746, 75.8691, -12.6465, 77.2546, -10.5859, 78.4219, -8.34961, 79.3254, -5.87891, 79.9199, -3.11523, 80.1599, 0, 80, 3.52539, 79.0781, 10.166, 77.875, 15.4004, 72.125, 31.6504, 70.9219, 36.8848, 70, 43.5254, 69.0781, 50.166, 67.875, 55.4004, 62.125, 71.6504, 60.9219, 76.8848, 60, 83.5254, 58.75, 103.525, 57.9102, 107.354, 56.3438, 111.65, 50, 123.525, 40.6406, 138.213, 35.498, 144.971, 29.875, 151.025, 26.843, 153.716, 23.6426, 156.143, 20.2576, 158.276, 16.6719, 160.088, 12.8694, 161.548, 8.83398, 162.627, 4.54956, 163.296, 0, 163.525, -4.54956, 163.296, -8.83398, 162.627, -12.8694, 161.548, -16.6719, 160.088, -20.2576, 158.276, -23.6426, 156.143, -26.843, 153.716, -29.875, 151.025, -35.498, 144.971, -40.6406, 138.213, -50, 123.525, -56.3438, 111.65, -57.9102, 107.354, -58.75, 103.525, -60, 83.5254, -60.9219, 76.8848, -62.125, 71.6504, -67.875, 55.4004, -69.0781, 50.166, -70, 43.5254, -70.9219, 36.8848, -72.125, 31.6504, -77.875, 15.4004, -79.0781, 10.166, -80, 3.52539, -80.1599, 0, -79.9199, -3.11523, -79.3254, -5.87891, -78.4219, -8.34961, -77.2546, -10.5859, -75.8691, -12.6465, -72.625, -16.4746, -65.5156, -24.5996, -63.8738, -27.0703, -62.377, -29.834, -61.0706, -32.9492, -60, -36.4746, -56.9531, -51.1621, -55.9534, -54.6143, -54.6387, -57.9199, -52.8992, -61.0498, -50.625, -63.9746, -47.7063, -66.665, -44.0332, -69.0918, -39.4958, -71.2256, -33.9844, -73.0371, -27.3889, -74.4971, -19.5996, -75.5762 )

[node name="mouth" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.222855, -75.0508 )
